baculum: Add volumes overview endpoint
