# gui/baculum/protected/API/Modules/VolumeManager.php
@@ -22,6 +22,8 @@
 
 namespace Baculum\API\Modules;
 
+use PDO;
+
 /**
  * Volume manager module.
  *
@@ -30,6 +32,69 @@ namespace Baculum\API\Modules;
  * @package Baculum API
  */
 class VolumeManager extends APIModule {
+
+	/**
+	 * Volume types (voltype property)
+	 */
+	const VOLTYPE_FILE = 1;
+	const VOLTYPE_TAPE = 2;
+	const VOLTYPE_DVD = 3;
+	const VOLTYPE_FIFO = 4;
+	const VOLTYPE_VTAPE_DEV = 5;
+	const VOLTYPE_FTP_DEV = 6;
+	const VOLTYPE_VTL_DEV = 7;
+	const VOLTYPE_ADATA = 8;
+	const VOLTYPE_ALIGNED_DEV = 9;
+	const VOLTYPE_DEDUP_OLD_DEV = 10;
+	const VOLTYPE_NULL_DEV = 11;
+	const VOLTYPE_VALIGNED_DEV = 12;
+	const VOLTYPE_VDEDUP_DEV = 13;
+	const VOLTYPE_CLOUD_DEV = 14;
+	const VOLTYPE_DEDUP_DEV = 15;
+
+	/**
+	 * Get disk volume type identifiers.
+	 *
+	 * @return array disk volume type identifiers
+	 */
+	private function getDiskVolTypes() {
+		return [
+			self::VOLTYPE_FILE,
+			self::VOLTYPE_ADATA,
+			self::VOLTYPE_FIFO,
+			self::VOLTYPE_ALIGNED_DEV,
+			self::VOLTYPE_DEDUP_OLD_DEV,
+			self::VOLTYPE_VALIGNED_DEV,
+			self::VOLTYPE_VDEDUP_DEV,
+			self::VOLTYPE_CLOUD_DEV,
+			self::VOLTYPE_DEDUP_DEV
+		];
+	}
+
+
+	/**
+	 * Get tape volume type identifiers.
+	 *
+	 * @return array tape volume type identifiers
+	 */
+	private function getTapeVolTypes() {
+		return [
+			self::VOLTYPE_TAPE,
+			self::VOLTYPE_VTL_DEV
+		];
+	}
+
+
+	/**
+	 * Get cloud volume type identifiers.
+	 *
+	 * @return array cloud volume type identifiers
+	 */
+	private function getCloudVolTypes() {
+		return [
+			self::VOLTYPE_CLOUD_DEV
+		];
+	}
 
 	public function getVolumes($criteria = array(), $limit_val = 0, $offset_val = 0) {
 		$order_pool_id = 'PoolId';
@@ -66,6 +131,147 @@ LEFT JOIN Storage USING (StorageId)
 		$volumes = VolumeRecord::finder()->findAllBySql($sql, $where['params']);
 		$this->setExtraVariables($volumes);
 		return $volumes;
+	}
+
+	/**
+	 * Get volume overview.
+	 *
+	 * @param array $criteria SQL criteria to get volume overview
+	 * @param integer $limit_val item limit
+	 * @param integer $offset_val offset value
+	 * @return array volume overview
+	 */
+	public function getMediaOverview($criteria = [], $limit_val = 0, $offset_val = 0) {
+		$limit = '';
+		if(is_int($limit_val) && $limit_val > 0) {
+			$limit = " LIMIT $limit_val ";
+		}
+		$offset = '';
+		if (is_int($offset_val) && $offset_val > 0) {
+			$offset = ' OFFSET ' . $offset_val;
+		}
+
+		$where = Database::getWhere($criteria);
+
+		// get volume type count
+		$sql = 'SELECT
+			VolType AS voltype,
+			COUNT(1) AS count
+			FROM Media
+			JOIN Pool USING (PoolId)
+			' . $where['where'] . '
+			GROUP BY VolType ';
+
+		$statement = Database::runQuery($sql, $where['params']);
+		$voltype_count = $statement->fetchAll(PDO::FETCH_ASSOC);
+
+		$expire_query = '';
+		$db_params = $this->getModule('api_config')->getConfig('db');
+		if ($db_params['type'] === Database::PGSQL_TYPE) {
+			$expire_query = 'CAST((DATE_PART(\'epoch\', Media.LastWritten) + Media.VolRetention) AS INTEGER)';
+		} elseif ($db_params['type'] === Database::MYSQL_TYPE) {
+			$expire_query = 'CAST((UNIX_TIMESTAMP(Media.LastWritten) + Media.VolRetention) AS UNSIGNED)';
+		} elseif ($db_params['type'] === Database::SQLITE_TYPE) {
+			$expire_query = 'CAST((strftime(\'%s\', Media.LastWritten) + Media.VolRetention) AS INTEGER)';
+		}
+
+		// get disk volume types (file, dedup and alighed together)
+		$vt_disk = $this->getDiskVolTypes();
+		$sql = 'SELECT
+				VolumeName   AS volumename,
+				Pool.Name    AS pool,
+				Storage.Name AS storage,
+				VolBytes     AS volbytes,
+				VolABytes    AS volabytes,
+				InChanger    AS inchanger,
+				Slot         AS slot,
+				CASE 
+					WHEN Media.VolStatus IN (\'Full\', \'Used\') THEN ' . $expire_query . '
+					ELSE 0
+				END expiresin
+			FROM Media
+			JOIN Storage USING (StorageId)
+			JOIN Pool USING (PoolId)
+			' .  (!empty($where['where']) ? $where['where'] . ' AND ' : ' WHERE ') . ' VolType IN (' . implode(',', $vt_disk) . ')
+			ORDER BY VolStatus ASC, LastWritten DESC' . $limit . $offset;
+
+		$statement = Database::runQuery($sql, $where['params']);
+		$voltype_disk = $statement->fetchAll(PDO::FETCH_OBJ);
+
+		// get tape volume types
+		$vt_tape = $this->getTapeVolTypes();
+		$sql = 'SELECT
+				VolumeName   AS volumename,
+				Pool.Name    AS pool,
+				Storage.Name AS storage,
+				VolBytes     AS volbytes,
+				VolABytes    AS volabytes,
+				InChanger    AS inchanger,
+				Slot         AS slot,
+				CASE 
+					WHEN Media.VolStatus IN (\'Full\', \'Used\') THEN ' . $expire_query . '
+					ELSE 0
+				END expiresin
+			FROM Media
+			JOIN Storage USING (StorageId)
+			JOIN Pool USING (PoolId)
+			' .  (!empty($where['where']) ? $where['where'] . ' AND ' : ' WHERE ') . ' VolType IN (' . implode(',', $vt_tape) . ')
+			ORDER BY VolStatus ASC, LastWritten DESC' . $limit . $offset;
+
+		$statement = Database::runQuery($sql, $where['params']);
+		$voltype_tape = $statement->fetchAll(PDO::FETCH_OBJ);
+
+		// get cloud volume types
+		$vt_cloud = $this->getCloudVolTypes();
+		$sql = 'SELECT
+				VolumeName   AS volumename,
+				Pool.Name    AS pool,
+				Storage.Name AS storage,
+				VolBytes     AS volbytes,
+				VolABytes    AS volabytes,
+				InChanger    AS inchanger,
+				Slot         AS slot,
+				CASE 
+					WHEN Media.VolStatus IN (\'Full\', \'Used\') THEN ' . $expire_query . '
+					ELSE 0
+				END expiresin
+			FROM Media
+			JOIN Storage USING (StorageId)
+			JOIN Pool USING (PoolId)
+			' .  (!empty($where['where']) ? $where['where'] . ' AND ' : ' WHERE ') . ' VolType IN (' . implode(',', $vt_cloud) . ')
+			ORDER BY VolStatus ASC, LastWritten DESC' . $limit . $offset;
+
+		$statement = Database::runQuery($sql, $where['params']);
+		$voltype_cloud = $statement->fetchAll(PDO::FETCH_OBJ);
+
+		$disk_count = $tape_count = $cloud_count = 0;
+		for ($i = 0; $i < count($voltype_count); $i++) {
+			$count = $voltype_count[$i]['count'];
+			$voltype = $voltype_count[$i]['voltype'];
+			if (in_array($voltype, $vt_disk)) {
+				$disk_count += $count;
+			} elseif (in_array($voltype, $vt_tape)) {
+				$tape_count += $count;
+			} elseif (in_array($voltype, $vt_cloud)) {
+				$cloud_count += $count;
+			}
+		}
+
+		$result = [
+			'disk' => [
+				'media' => $voltype_disk,
+				'count' => $disk_count
+			],
+			'tape' => [
+				'media' => $voltype_tape,
+				'count' => $tape_count
+			],
+			'cloud' => [
+				'media' => $voltype_cloud,
+				'count' => $cloud_count
+			]
+		];
+		return $result;
 	}
 
 	public function getVolumesByPoolId($poolid) {
